testing/keywords/test1.uni
main() {
	busOne = 11101b; //valid
	make = 110b; //error 
}
neigh 
